--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "dependencies": {
     "@notionhq/client": "^2.2.5",
+    "@sveltejs/adapter-node": "^1.2.4",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "notion-to-md": "^3.0.1",
     "svelte-markdown": "^0.2.3",
