refactor: migrate to TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/store.ts"],
   "exclude": ["node_modules", "dist"]
 }
