--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "notion-to-md": "^3.0.1",
     "svelte-markdown": "^0.2.3",
     "svelte-motion": "^0.11.5",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
